--- a/src/layouts/dashboard.css
+++ b/src/layouts/dashboard.css
@@ -3,7 +3,7 @@
     color:#000000 !important;
 }
 .MuiButtonGroup-root{
-    border-radius: 7px;
+    border-radius: 12px !important;
     border: 1px solid #1A73E8;
 }
 .selected{
