--- a/src/components/Tables/users.css
+++ b/src/components/Tables/users.css
@@ -13,7 +13,7 @@
   color: #7b809a;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
-.tabletitle h6 {
+.tabletitle {
   color: #344767 !important;
-  margin-top: 20px;
+  margin-top: 20px !important;
 }
